--- a/testdata/testapp/app/views/hotels/error.html
+++ b/testdata/testapp/app/views/hotels/error.html
@@ -1,7 +1,7 @@
-{{set . "title" "Template render panic"}}
+{{set . "title" "Template render error"}}
 {{template "header.html" .}}
 
-<h1>Panic:</h1>
+<h1>Error:</h1>
 
 {{if .error}}
 <div>{{.NilPointer.Field}}</div>
