fix parse block bug

--- a/testdata/views/layout.html
+++ b/testdata/views/layout.html
@@ -1,4 +1,9 @@
 <html>
+<!--
+--------------
+- this is a comment
+- and it should not recoganized as block even if contains block keyword
+//-->
   <head>
     <title>#{yield "title"}</title>
   </head>
