--- a/testdata/testapp/app/views/application/index.html
+++ b/testdata/testapp/app/views/application/index.html
@@ -1,9 +1,9 @@
 {{set . "title" "Home"}}
+
 {{template "header.html" .}}
 
 <div id="login">
-
-  (try with demo/demo)
+  <h1>Application Login Page</h1>
 
   <form action="{{url "Application.Login"}}" id="formLogin" method="POST">
     <p class="field">
