--- a/testdata/testapp/app/views/errors/403.html
+++ b/testdata/testapp/app/views/errors/403.html
@@ -1,6 +1,7 @@
-{{set . "title" "Template render panic"}}
+{{set . "title" "Template render error"}}
+
 {{template "header.html" .}}
 
-<h1>App 403 error page</h1>
+<h1>Hotels 403 Error Page</h1>
 
 {{template "footer.html" .}}
