--- a/testdata/testapp/app/views/hotels/book.html
+++ b/testdata/testapp/app/views/hotels/book.html
@@ -1,8 +1,9 @@
 {{append . "moreStyles" "ui-lightness/jquery-ui-1.7.2.custom.css"}}
 {{append . "moreScripts" "js/jquery-ui-1.7.2.custom.min.js"}}
+
 {{template "header.html" .}}
 
-<h1>Book hotel</h1>
+<h1>Hotels Book Page</h1>
 
 <form method="POST" action="{{url "Hotels.Book" .hotel.HotelId}}">
   <p>
