--- a/testdata/testapp/app/views/hotels/confirmbooking.html
+++ b/testdata/testapp/app/views/hotels/confirmbooking.html
@@ -1,6 +1,6 @@
 {{template "header.html" .}}
 
-<h1>Confirm hotel booking</h1>
+<h1>Hotels Confirm Booking Page</h1>
 
 <form method="POST" action="{{url "Hotels.ConfirmBooking" .hotel.HotelId}}">
   <p>
