--- a/testdata/testapp/app/views/hotels/index.html
+++ b/testdata/testapp/app/views/hotels/index.html
@@ -1,7 +1,7 @@
-{{set . "title" "Search"}}
-{{template "header.html" .}}
+- block "title"
+  Search Hotels
 
-<h1>Search Hotels</h1>
+<h1>Hotels Index Page</h1>
 
 <p>
   <input type="text" id="search" size="30">
@@ -19,6 +19,45 @@
 
 <div id="result">
 </div>
+
+<h1>Current Hotel Bookings</h1>
+
+{{if not .bookings}}
+<p>
+  No Bookings Found
+</p>
+{{else}}
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Address</th>
+      <th>City, State</th>
+      <th>Check in</th>
+      <th>Check out</th>
+      <th>Confirmation number</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{range .bookings}}
+    <tr>
+      <td>{{.Name}}</td>
+      <td>{{.Address}}</td>
+      <td>{{.City}}, {{.State}}, {{.Country}}</td>
+      <td>{{.CheckInDate.Format "2006-01-02"}}</td>
+      <td>{{.CheckOutDate.Format "2006-01-02"}}</td>
+      <td>{{.BookingId}}</td>
+      <td>
+        <form id="d{{.BookingId}}" method="POST" action="/bookings/{{.BookingId}}/cancel">
+          <a href="javascript:document.getElementById('d{{.BookingId}}').submit();">Cancel</a>
+        </form>
+      </td>
+    </tr>
+    {{end}}
+  </tbody>
+</table>
+{{end}}
 
 <script type="text/javascript" charset="utf-8">
 
@@ -68,44 +107,3 @@
   }
 
 </script>
-
-<h1>Current Hotel Bookings</h1>
-
-{{if not .bookings}}
-<p>
-  No Bookings Found
-</p>
-{{else}}
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>City, State</th>
-      <th>Check in</th>
-      <th>Check out</th>
-      <th>Confirmation number</th>
-      <th>Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    {{range .bookings}}
-    <tr>
-      <td>{{.Hotel.Name}}</td>
-      <td>{{.Hotel.Address}}</td>
-      <td>{{.Hotel.City}}, {{.Hotel.State}}, {{.Hotel.Country}}</td>
-      <td>{{.CheckInDate.Format "2006-01-02"}}</td>
-      <td>{{.CheckOutDate.Format "2006-01-02"}}</td>
-      <td>{{.BookingId}}</td>
-      <td>
-        <form id="d{{.BookingId}}" method="POST" action="/bookings/{{.BookingId}}/cancel">
-          <a href="javascript:document.getElementById('d{{.BookingId}}').submit();">Cancel</a>
-        </form>
-      </td>
-    </tr>
-    {{end}}
-  </tbody>
-</table>
-{{end}}
-
-{{template "footer.html" .}}
