--- a/testdata/testapp/app/views/hotels/panic.html
+++ b/testdata/testapp/app/views/hotels/panic.html
@@ -1,7 +1,7 @@
 {{set . "title" "Template render panic"}}
 {{template "header.html" .}}
 
-<h1>Panic:</h1>
+<h1>Hotels Panic Page</h1>
 
 {{if .panic}}
 <div>{{triggerPanic}}</div>
