--- a/testdata/testapp/app/views/footer.html
+++ b/testdata/testapp/app/views/footer.html
@@ -1,8 +1,9 @@
     </div>
 
     <div id="footer">
+      <h1>Hotels Footer</h1>
+
       Created with the <a href="http://github.com/golib/revel">Revel framework</a> and really inspirated from the booking sample application provided by <a href="http://www.playframework.org">play framework</a>, which was really inspired by the booking sample application provided by the <a href="http://seamframework.org/">seam framework</a>.
     </div>
-
   </body>
 </html>
