--- a/testdata/views/content.html
+++ b/testdata/views/content.html
@@ -6,6 +6,10 @@
     This is a layout template content
   </div>
 
+  <div>
+    This is a content following whitespace line
+  </div>
+
 <div>
   This is normal template content
 </div>
